add or to try